[package]
name = "lantern"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
#songbird = { version = "0.3.2", features = ["twilight-native","gateway","zlib-stock"] }
toml = "0.7.3"
serde_derive = "1.0.160"
serde = "1.0.160"
tokio = { version = "1", features = ["full"] }
kafka = "0.9.0"
openssl = "0.10.52"
log = "0.4"
once_cell = "1.17.1"
humantime = "2.1.0"
nanoid = "0.4.0"
serde_json = "1.0.96"
futures = "0.3.28"
fern = { version = "0.6.2", features = ["colored"] }
reqwest = "0.11.17"
songbird = { path = "../finch" }
serenity = { version = "0.11.5", default-features = false, features = ["builder","cache","client","gateway","http","model","utils","rustls_backend"] }
bytes = "1.4.0"
symphonia = "0.5.2"
lofty = "0.12.1"
retry = "2.0.0"
url = "2.3.1"
snafu = "0.7.4"
symphonia-core = "0.5.2"
lazy_static = "1.4.0"
debugless-unwrap = "0.0.4"
