[package]
name = "hearth"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
#songbird = { version = "0.3.2", features = ["twilight-native","gateway","zlib-stock"] }
toml = "0.7.3"
serde_derive = "1.0.160"
serde = "1.0.160"
tokio = { version = "1", features = ["full"] }
rdkafka = { version = "0.25", features = ["cmake-build"] }
openssl = "0.10.52"
log = "0.4"
once_cell = "1.17.1"
humantime = "2.1.0"
nanoid = "0.4.0"
serde_json = "1.0.96"
futures = "0.3.28"
fern = { version = "0.6.2", features = ["colored"] }
reqwest = "0.11.17"
bytes = "1.4.0"
symphonia = { version = "0.5.2", features = ['pcm','mp3','wav','isomp4','aac','alac'] }
retry = "2.0.0"
url = "2.3.1"
symphonia-core = "0.5.2"
lazy_static = "1.4.0"
sysinfo = "0.29.0"
colored = "2.0.0"
rand = "0.8.5"
anyhow = "1.0.71"

[dependencies.songbird]
git = "https://github.com/Hearth-Industries/songbird-next-fork.git"

[dependencies.serenity]
features = ["client", "standard_framework", "voice", "native_tls_backend","builder","cache","gateway","http","model","utils"]
git = "https://github.com/serenity-rs/serenity"
branch = "next"

[dependencies.hearth-interconnect]
git = "https://github.com/Hearth-Industries/hearth-interconnect.git"
