[package]
name = "hearth"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
toml = "0.7.4"
serde_derive = "1.0.160"
serde = "1.0.164"
tokio = { version = "1", features = ["full"] }
rdkafka = { version = "0.32", features = ["cmake-build","ssl"] }
openssl = "0.10.55"
log = "0.4"
humantime = "2.1.0"
nanoid = "0.4.0"
serde_json = "1.0.96"
futures = "0.3.28"
fern = { version = "0.6.2", features = ["colored"] }
reqwest = "0.11.18"
bytes = "1.4.0"
symphonia = { version = "0.5.3", features = ['pcm','mp3','wav','isomp4','aac','alac'] }
url = "2.4.0"
symphonia-core = "0.5.2"
colored = "2.0.0"
rand = "0.8.5"
anyhow = "1.0.71"
async_fn_traits = "0.1.1"
sentry = "0.31.3"
dashmap = "5.4.0"

[dependencies.songbird]
git = "https://github.com/Hearth-Industries/songbird.git"
branch="next"

[dependencies.serenity]
features = ["client", "standard_framework", "voice", "native_tls_backend","builder","cache","gateway","http","model","utils"]
git = "https://github.com/serenity-rs/serenity.git"
branch="next"

[dependencies.hearth-interconnect]
git = "https://github.com/Hearth-Industries/hearth-interconnect.git"

[profile.release]
# Optimizes performance for Release Build but turns compile times from a bit slow to molasses (my system about 3mins)
lto = "fat"
codegen-units = 1
